[gd_scene load_steps=6 format=3 uid="uid://badsd7xasf2gm"]

[ext_resource type="Script" uid="uid://eo7ld4d022ld" path="res://scripts/change_password.gd" id="1_1na7x"]
[ext_resource type="FontFile" uid="uid://b778cnyygqp4l" path="res://assets/fonts/IBMPlexSans-Regular.ttf" id="1_8x1ao"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq38h"]
bg_color = Color(0.627451, 0.976471, 0.898039, 0.654902)

[sub_resource type="Theme" id="Theme_oq38h"]

[sub_resource type="LabelSettings" id="LabelSettings_oq38h"]
font = ExtResource("1_8x1ao")
font_size = 50
font_color = Color(0.00351917, 0.00351917, 0.00351917, 1)

[node name="Node2D" type="CanvasLayer"]
script = ExtResource("1_1na7x")

[node name="Panel" type="Panel" parent="."]
offset_right = 1080.0
offset_bottom = 2400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oq38h")

[node name="confirm_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 1646.0
offset_right = 990.0
offset_bottom = 1846.0
theme_override_fonts/font = ExtResource("1_8x1ao")
theme_override_font_sizes/font_size = 50
text = "Confirmar"

[node name="new_password_line" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 1096.0
offset_right = 990.0
offset_bottom = 1296.0
theme_override_colors/selection_color = Color(0.100736, 0.837537, 0.735446, 1)
theme_override_fonts/font = ExtResource("1_8x1ao")
theme_override_font_sizes/font_size = 40
alignment = 1

[node name="confirm_password_line" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 1396.0
offset_right = 990.0
offset_bottom = 1596.0
theme = SubResource("Theme_oq38h")
theme_override_colors/selection_color = Color(0.100736, 0.837537, 0.735446, 1)
theme_override_fonts/font = ExtResource("1_8x1ao")
theme_override_font_sizes/font_size = 40
alignment = 1

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 1030.0
offset_right = 990.0
offset_bottom = 1096.0
text = "Nova senha App de Mensagem"
label_settings = SubResource("LabelSettings_oq38h")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 1328.0
offset_right = 990.0
offset_bottom = 1394.0
text = "Nova senha App de Mensagem"
label_settings = SubResource("LabelSettings_oq38h")

[node name="close" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 964.0
offset_top = 28.0
offset_right = 1044.0
offset_bottom = 100.0
text = "X"
